// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.styles App DEVE ser igual ao snapshot 1`] = `
.c0 {
  text-align: center;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`App.styles Header DEVE ser igual ao snapshot 1`] = `
.c0 {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

<div>
  <header
    class="c0"
  />
</div>
`;

exports[`App.styles Link DEVE ser igual ao snapshot 1`] = `
.c0 {
  color: #61dafb;
}

<div>
  <a
    class="c0"
  />
</div>
`;

exports[`App.styles Logo DEVE ser igual ao snapshot 1`] = `
.c0 {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .c0 {
    animation: fvtopB infinite 20s linear;
  }
}

<div>
  <img
    class="c0"
  />
</div>
`;

exports[`App.styles Texto DEVE ser igual ao snapshot 1`] = `
<div>
  <p
    class=""
  />
</div>
`;
